# stm32h743-rtfm

./: .gdbinit  Cargo.toml  README.md  h743_interrupts.md  openocd.cfg  openocd.gdb
src/: bno080.rs  lib.rs  main.rs
