[package]
name = "h743_rtfm"
version = "0.1.0"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A basic rtfm_rs app for stm32h743"


[dependencies]
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
cortex-m-rtfm = "0.5.1"
stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743","rt"] }

cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }

#cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
#stm32h7 = "0.9.0"
#cortex-m = "^0.6.0"
#cortex-m-rt = "0.6.11"
#panic-itm = "~0.4.1"
#stm32h743 = "0.2.2"
