[package]
name = "h743_rtfm"
version = "0.1.0"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A basic rtfm_rs app for stm32h743"

[dependencies]
#cortex-m-semihosting = "0.3.5"
#panic-semihosting = "0.5"
panic-itm = "~0.4.1"

embedded-hal = {version = "0.2.3", features = ["unproven"]  }
cortex-m-rtfm = "0.5.1"
stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743","rt"] }
#bno080 = { path = "../../BNO080" }
#bno080 = { git = "https://github.com/tstellanova/bno080.git" }

cortex-m = "^0.6.0"
